@@ -1,5 +1,12 @@
 2002-01-06 Stefan Petersen (spe@stacken.kth.se)
 
+	* src/amacro.c: Parser handles negative immediate values.
+	* src/draw.c: Load of minor bugfixes after verification like 
+	  rotate points in the other direction, line wiidths constant,
+	  wrong indeces
+
+2002-01-06 Stefan Petersen (spe@stacken.kth.se)
+
 	* src/draw.c: All primitive macros are implemented (though not
 	  completely) and passed the MS-test; they compile. Now it's 
 	  verify, verify and verify.
